results/SVCOMP/4-shot/log-ExSymExe16-2024_03_18_18_30_22.txt
class Main {
  static int field;

  //@ ensures \result <==> test(x, field);
  public static boolean f() {
    int x = 3;
    Main inst = new Main();
    field = 9;
    return inst.test(x, field);
  }
  
  //@ requires x == 3 && z == field;
  //@ ensures \result <==> (z == 0 ? false : (x == 0 ? true : false));
  public boolean test(int x, int z) {
    System.out.println("Testing ExSymExe16");
    int y = 3;
    x = z - y;
    if (z == 0) {
      System.out.println("branch FOO1");
      return false;
    } else {
      System.out.println("branch FOO2");
    }
    if (x == 0) {
      System.out.println("branch BOO1");
    } else {
      System.out.println("branch BOO2");
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe16.java:4: error: cannot find symbol
  //@ ensures \result <==> test(x, field);
                                ^
  symbol:   variable x
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe16.java:4: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result <==> test(x, field);
                                   ^
/home/max/Documents/JMLGPT/tmp/ExSymExe16.java:12: error: An identifier with package visibility may not be used in a requires clause with public visibility
  //@ requires x == 3 && z == field;
                              ^
3 errors

